# dosemu2

./: .gitignore  Makefile  Makefile.conf.in  ci_test.sh  configure.ac  dosemu2.spec  io.github.dosemu2.dosemu2.yml  plugin_list
.github/workflows/: ci-flatpak.yml  ci-scheduled.yml  packages.yml
debian/: control  postinst
etc/: dosemu.conf
scripts/: plugctl.sh
src/: dosemu
src/arch/linux/: Makefile.main
src/arch/linux/async/: debug.c  signal.c
src/base/bios/x86/: bios.S
src/base/core/: emu.c  int.c  priv.c
src/base/dev/misc/: joystick.c
src/base/dev/sb16/: dspio.c
src/base/dev/vga/: crtcemu.c  gfxemu.c  vesa.c  vgaemu.c
src/base/emu-i386/: do_vm86.c  kvm.c
src/base/emu-i386/simx86/: codegen-arch.h  codegen-x86.c  cpatch.c  cpu-emu.c  emu86.h  fp87-sim.c  fp87-x86.c  interp.c  memory.c  protmode.c  sigsegv.c  trees.c  trees.h
src/base/init/: config.c  dev_list.c  init.c  lexer.l  memcheck.c  parser.y
src/base/lib/fslib/: fslib.c  fslib_local.c
src/base/lib/mapping/: mapfile.c  mapping.c  mpriv.h
src/base/lib/misc/: Makefile  dlmalloc.c  shlock.c  smalloc.c
src/base/misc/: dos2linux.c  hma.c  iosel.c  utilities.c
src/base/video/: remap.c  render.c
src/dosext/dpmi/: Makefile  coopth_pm.c  dpmi.c  emudpmi.h  memory.c  msdoshlp.c  msdoshlp.h
src/dosext/dpmi/dnative/: Makefile  dnative.c  dnative.h  dnpriv.h  sigsegv.c
src/dosext/dpmi/msdos/: msdos.c
src/dosext/mfs/: rlocks.c
src/dosext/misc/: emm.c  xms.c
src/dosext/net/: ipx.c  ipx_be.c  ipx_udp_be.c  ipx_wrp.h  tcp.c
src/include/: cpu-emu.h  cpu.h  dpmi_api.h  emu.h  emu_config.h  fslib.h  fslib_ops.h  iodev.h  ipx.h  mapping.h  mcontext.h  memory.h  sig.h  smalloc.h  utilities.h  vgaemu.h
src/include/Linux/: const.h
src/plugin/X/: X.c  configure.ac
src/plugin/debugger/: mhpdbg.c  mhpdbgc.c
src/plugin/dj64/: djdev64.c
src/plugin/dnative/: Makefile  configure.ac  dnative.c  sigsegv.c
src/plugin/dnative/config/: plugin_config.h
src/plugin/fdpp/: configure.ac
src/plugin/fluidsynth/: mid_o_flus.c
src/plugin/libao/: snd_o_ao.c
src/plugin/msdos/: Makefile  hlpmisc.h  msdos.c  msdos.h  msdos_ldt.c  msdos_ldt.h  segreg.c
src/plugin/munt/: configure.ac  munt.c
src/plugin/sdl/: configure.ac
src/plugin/searpc/: Makefile  Makefile.conf.in  configure.ac  fslib_be.c  fsrpc_srv.c  fsrpcdefs.h  fssvc.c  fssvc_priv.h  rpc_table.py  util.c  util.h
src/plugin/searpc/dremote/: Makefile  dnrpc_srv.c  dnrpcdefs.h  dnsvc.c  rpc_table.py  sc_filter.c  sc_filter.h  uffd.c  uffd.h
src/plugin/searpc/sr_bkp/: searpc-marshal.h  searpc-signature.h
src/plugin/searpc/sr_bkp/dremote/: searpc-marshal.h  searpc-signature.h
src/plugin/slirp/libvdeslirp/: libvdeslirp.c
test/: dosemu_tap_interface.sh  func_cpu_methods.py  test_dos.py
